stylesheet.css
/* Navigation bar */
.nav_link {
  float: left; 
  text-align: center; 
  text-decoration: none; 
  padding: 15px;
  color: black;
  padding-left: 5%;
}

.nav_hover:hover {
  opacity: 0.5;
}

.dropdown_menu {
  background-color: gainsboro;
  text-decoration: none;
}

.nav_bar {
  position: fixed; 
  z-index: 1; 
  height: 65px; 
  background-color: whitesmoke; 
  align-items: center; 
  width: 100%;
}

.drop_link {
  display: block; 
  text-decoration: none;
  color: black;
  height: 50px;
  padding: 10px;
  text-align: center;
}

.drop_link:hover {
  background-color: gray;
}

.drop_btn {
  border: none;
  cursor: pointer;
  background-color: whitesmoke;
  margin-bottom: 20px;
}

/* All */

* {
  margin: 0;
  padding: 0;
  font-family: Helvetica, Arial, sans-serif;
  font-size: 20px;
  line-height: 1.5;
  box-sizing: border-box;
}

h2 {
  font-size: 40px;
}

.key_word {
  color: green;
}

/* Background image */

.large_background {
  display: block;
}

.large_background h1 {
  font-size: 50px;
}

.large_background img {
  width: 100%;
  height: auto;
  max-width: 100%;
  position: relative;
  z-index: -1; 
  display: inline-block;
}

.title {
  position: absolute; 
  top: calc(45% - 50px);
  left: 0;
  text-align: center; 
  width: 100%; 
  color: white;
}

/* Layout 60/40 */

.coll {
  content:"";
  display: table;
  width: 100%;
}

.col_60 {
  width: 60%;
  float: left;
  padding: 100px;
}

.col_40 {
  width: 40%;
  float: left;
  padding: 50px;
}

.col_40 img {
  width: 100%;
  height: auto;
  position: relative;
  margin-top: 100px;
}

figure {
  position: relative;
}

.reference {
  position: relative;
  font-size: 15px;
  color: grey;
}

.btn_green {
  position: relative;
  background-color: green;
  border: none;
  cursor: pointer;
  height: 5%;
  width: 15%;
  color: white;
  font-size: 25px;
  text-decoration: none;
  text-align: center;
}

/* Layout 50/50  */

.col_50 {
  width: 50%;
  float:left;
  padding: 50px;
  margin-top: 75px;
}

.left_btn {
  position: absolute;
  border-style: solid;
  border-radius: 10px;
  border-width: 2px;
  width: 10%;
  cursor: pointer;
  text-decoration: none;
  text-align: center;
  color: black;
  left: 15%;
}

.left_btn:hover {
  color: white;
  background:black;
}

.right_btn {
  position: absolute;
  border-style: solid;
  border-radius: 10px;
  border-width: 2px;
  width: 15%;
  cursor: pointer;
  text-decoration: none;
  text-align: center;
  color: black;
  left: 70%;
}

.right_btn:hover {
  color: white;
  background:black;
}

.col2_img{
  width: 100%;
  height: auto;
  max-width: 100%;
  position: relative;
  margin-top: 50px;
}

footer {
  background-color: whitesmoke;
  text-align: center;
  align-items: center;
  float: left;
}

footer p {
  margin: auto;
  width: 35%;
  text-align: center;
  align-items: center;
}

/* single column layout */

.main_col {
  margin: auto;
  padding: 50px;
  width: 70%;
  align-items: center;
  text-align: center;
  background-color: white;
}

.main_col p {
  margin: auto;
  width: 50%;
}

.main_col a {
  align-items: center;
  text-align: center;
  border-style: solid;
  border-radius: 5px;
  border-width: 2px;
  background-color:white;
  text-decoration: none;
  color: black;
}

.main_col a:hover {
  color: white;
  background:black;
}

.background_smoke {
  background-color: whitesmoke;
}

/* Quiz */
.quiz_body {
  margin: auto;
  padding: 50px;
  align-items: center;
  text-align: center;
}

.quiz_background {
  background-color: bisque;
}

.quiz_body h1 {
  font-size: 35px
}

.container {
  margin-top: 10%;
  margin-left: 20%;
  background-color: white;
  max-width: 60%;
  min-height: 300px;
  }

.btn_area {
  display: inline-block;
}

.quiz_btn {
  text-decoration: none;
  padding: 20px;
  font-weight: bold;
  width: 200px;
  text-align: center;
  border-radius: 15px;
  margin-left: 20px;
  margin-top: 35px;
  margin-bottom: 20px;
  margin-right: 20px;
  cursor: pointer;
  background-color: bisque;
  border-style: solid;
  border-color:blanchedalmond;
}

.quiz_btn:hover {
  -webkit-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
  background-color: blanchedalmond;
}

.start_btn {
  margin-top: 5%;
}

#score_card {
  font-weight: bold;
  padding-top: 10%;
  font-size: 25px;
}

#question {
  font-weight: bold;
  padding-top: 20px;
}

.imgTopLeft {
  position: fixed;
  width: 50%;
  height: 50%;
}

.h1TopLeft {
  position: fixed;
  top: calc(25% - 50px);
  left: calc(25% - 80px);
  color: white;
  font-size: 30px;
}

.imgBotLeft {
  position: fixed;
  width: 50%;
  height: 50%;
  top: 50%;
}

.h1BotLeft {
  position: fixed;
  top: calc(75% - 50px);
  left: calc(25% - 80px);
  font-size: 30px;
  color: white;
}

.imgTopRight {
  position: fixed;
  width: 50%;
  height: 33%;
  left: 50%;
}

.h1TopRight {
  position: fixed;
  top: calc(18% - 50px);
  left: calc(75% - 60px);
  font-size: 30px;
  color: white;
}

.imgMiddleRight {
  position: fixed;
  width: 50%;
  height: 33%;
  left: 50%;
  top: 33%;
}

.h1MiddleRight {
  position: fixed;
  top: calc(52% - 50px);
  left: calc(75% - 60px);
  font-size: 30px;
  color: white;
}

.imgBotRight {
  position: fixed;
  width: 50%;
  height: 34%;
  left: 50%;
  top: 66%;
}

.h1BotRight {
  position: fixed;
  top: calc(86% - 50px);
  left: calc(75% - 60px);
  font-size: 30px;
  color: white;
}

.titleContainer a:hover img{
  filter: brightness(70%);
}

.fading {
  position: relative;
  opacity: 0;
}

.fadeShow {
  opacity: 1;
  animation: toFade 1.5s 1;
}

.fadeShowRight {
  opacity: 1;
  animation: toRight 1.5s 1;
  animation-direction: forwards;
}

.fadeShowLeft {
  opacity: 1;
  animation: toLeft 1.5s 1;
  animation-direction: forwards;
}

.fadeRevereLeft {
  opacity: 1;
  animation: reverseLeft 1.5s 1;
  animation-direction: forwards;
}

.progress_style {
  padding-bottom: 3%;
}

.geo_btn {
  text-decoration: none;
  padding: 20px;
  font-weight: bold;
  width: 200px;
  text-align: center;
  border-radius: 15px;
  cursor: pointer;
  background-color: rgb(89, 193, 89);
  border-style: solid;
  border-color: darkgreen;
  margin-left: 50px;
  margin-top: 50px;
  color: black;
}

.geo_btn:hover {
  transition: ease-in 0.1s;
  -webkit-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
  background-color: darkgreen;
}

#indo {
  background-color: black;
  color: white;
}

#amazon {
  background-color: green;
  color: white;
}

.geo_title {
  margin-left: 30px;
  margin-top: 5%;
}

.geo_img {
  border-radius: 50%;
  width: 150px;
  height: 150px;
  margin-right: 100px;
  float: left;
}

.circle_tile {
  width: 100%;
  padding-left: 70px;
  padding-bottom: 50px;
}

.circle_canvas {
  height: 40%;
  width: 40%;
  margin-top: 10%;
}

.box40 {
  width: 40%;
  padding: 25px;
}

.orangeBack {
  background-color: darkorange;
}

.blueBack {
  background-color: blue;
  float: right;
}

.reveal_oval {
  padding: 3%;
  height: 15%;
  width: 20%;
  background-color: orange;
  border-radius: 50%;
  text-align: center;
} 

.oval_transition {
  transition: ease-in 0.5s;
  background-color:coral;
  padding:2%;
}

.reveal_para {
  width: 20%;
	height: 10%;
	transform: skew(20deg);
	background-color: aqua;
  padding: 2%;
  text-align: center;
  float: right;
  margin-right: 5%;
}

.para_transition {
  transition: ease-in 0.5s;
  padding: 1.2%;
  background-color:aquamarine;
}

.reveal_rec {
  width: 20%;
  height: 10%;
  background-color: greenyellow;
  text-align: center;
  padding: 2%;
  margin-top: 7%;
}

.rec_transition {
  transition: ease-in 0.5s;
  background-color: chartreuse;
  padding: 1.2%;
}

#congo {
  background-color: yellow;
}

/* Fundraise */
.fund_race {
  background-color: rgb(252, 144, 202);
  width: 60%;
  color: white;
  float: left;
  height: 800px;
}

.fund_race h2 {
  padding-top: 5%;
  padding-left: 15%;
}

.fund_race ul {
  padding-top: 2.5%;
  padding-left: 10%;
}

.fund_race li {
  font-size: 25px;
}

.fund_race div {
  padding-bottom: 3%;
}

.fund_race_img {
  width: 40%;
  height: 800px;
  float: left;
}

.slider_img {
  width: 100%;
  display: none;
}

.slide_left, .slide_right {
  cursor: pointer;
}

.slide_right {
  float: right;
}

.info_box {
  background-color: orange;
  text-align: center;
  align-items: center;
  margin-top: 75px;
  margin-bottom: 75px;
  height: auto;
  padding: 30px;
}

.card_style {
  width: 50%;
  float: left;
}

.card_style_img {
  width: 100%;
}

.card_style p {
  padding-top: 50px;
  width: 100%;
  height: 75%;
  color: white;
  background-color: rgb(128, 128, 128, 0.5);
}

.extinct_learn_card {
  background-color: orange;
  padding: 20px;
}

.extinct_learn_card img {
  padding: 15px; 
  width: 100%;
}

.extinct_charity_card {
  background-color: springgreen;
  padding: 20px;
}

.extinct_charity_card img {
  width: 100%;
  padding: 15px;
}

.extinct_form {
  background-color: aquamarine;
  padding: 20px;
}

.checkbox_style {
  text-align: left;
  padding-left: 40%;
}

.radio_style {
  text-align: left;
  padding-left: 45%;
}

.sub_btn {
  text-decoration: none;
  padding: 10px;
  font-weight: bold;
  width: 100px;
  height: 50px;
  text-align: center;
  border-radius: 15px;
  cursor: pointer;
  color: black;
  border-style: solid;
  border-color: grey;
  background-color: white;
}

.sub_btn:hover {
  transition: ease-in 0.1s;
  -webkit-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
  background-color: grey;
}

.extinct_news {
  background-color: rgb(149, 213, 84);
}

.extinct_news_img {
  padding: 0px;
  margin-top: 75px;
}

.uk_sit_form {
  background-color:lavenderblush;
  margin-bottom: 50px;
}

@keyframes toFade {
  0% {opacity: 40%; bottom: -500px;}
  50%{opacity: 70%;}
  100% {opacity: 100%; bottom:0;}
}

@keyframes toRight {
  0% {opacity: 40%; left: -500px;}
  50%{opacity: 70%;}
  100% {opacity: 100%; left:0;}
}

@keyframes toLeft {
  0% {opacity: 40%; right: -500px;}
  50%{opacity: 70%;}
  100% {opacity: 100%; right:0;}
}

@media only screen and (max-width: 895px) {
  /* Mobile Phones */

  * {
    font-size: 15px;
  }

  .nav_link {
    padding-top: 20px;
    padding-left: 10px;
  }

  .drop_btn {
    margin-bottom: 23px;
  }

  h2 {
    font-size: 25px;
  }

  .large_background h1 {
    font-size: 30px;
  }

  .col_50 {
    width: 100%;
    margin-top: 25px;
  }

  .col_60 {
    width:100%
  }

  .col_40 {
    width: 100%;
  }

  .left_btn {
    left: 40%;
  }

  .right_btn {
    left: 40%;
  }

  .geo_btn {
    width: 150px;
    margin-left: 25px;
    margin-top: 25px;
  }

  .circle_canvas {
    height: auto;
    width: 100%;
  }

  .reveal_rec {
    margin-left: 40%;
    margin-bottom: 5%;
  }

  .reveal_oval {
    margin-left: 40%;
  }

  .reveal_para {
    margin-right: 40%;
  }

  .fund_race {
    width: 100%;
  }

  .fund_race_img {
    width: 100%;
  }

  .info_box {
    height: 200px;
    margin: 50px
  }

  .card_style p {
    padding-top: 0;
    font-size: 10px;
  }
}

